plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.13' apply false
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'org.sonarqube' version '7.1.0.6387'
    id 'org.owasp.dependencycheck' version '12.2.0'
}

allprojects {
    group = 'com.example'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    // Redirect build output outside OneDrive on Windows to prevent Files On-Demand
    // from offloading .class files between compile and test phases.
    def oneDriveRoot = System.getenv('OneDrive') ?: System.getenv('OneDriveConsumer') ?: ''
    if (!oneDriveRoot.isEmpty() && projectDir.absolutePath.replace('\\', '/').startsWith(oneDriveRoot.replace('\\', '/'))) {
        def tempBase = System.getenv('TEMP') ?: System.getenv('TMP') ?: 'C:/Temp'
        layout.buildDirectory.set(file("${tempBase}/gradle-hms-build/${name}"))
    }
}

sonar {
    properties {
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.projectKey', 'DevFaso_hms'
        property 'sonar.organization', 'devfaso'
        property 'sonar.projectName', 'hms'
        property 'sonar.sourceEncoding', 'UTF-8'
        property 'sonar.gradle.skipCompile', 'true'
        property 'sonar.coverage.jacoco.xmlReportPaths',
                 "${project(':hospital-core').layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"

        // Align SonarQube coverage exclusions with JaCoCo verification exclusions
        property 'sonar.coverage.exclusions', [
            // Package-level exclusions
            '**/bootstrap/**',
            '**/seed/**',
            '**/config/**',
            '**/model/**',
            '**/payload/**',
            '**/exception/**',
            '**/enums/**',
            '**/mapper/**',
            '**/controller/**',
            '**/repository/**',
            '**/component/**',
            '**/security/**',
            '**/utility/**',
            '**/specification/**',
            '**/patient/**',
            '**/fhir/**',
            '**/hl7/mllp/**',
            '**/cdshooks/**',
            '**/HmsApplication.java',
            // Infrastructure / integration classes
            '**/EmailServiceImpl.java',
            '**/DigitalSignatureServiceImpl.java',
            '**/FileUploadService.java',
            '**/PdfInvoiceService.java',
            '**/InvoiceEmailService.java',
            '**/TwilioSmsServiceImpl.java',
            '**/TwilioSmsService.java',
            '**/MockSmsServiceImpl.java',
            '**/ChatKafkaListener.java',
            '**/AuditEventLogServiceImpl.java',
            '**/FrontendAuditServiceImpl.java',
            '**/InvoiceItemServiceImpl.java',
            '**/PatientRecordSharingServiceImpl.java',
            '**/ContentServiceImpl.java',
            '**/BillingInvoiceServiceImpl.java',
            // Complex orchestration / scheduling / messaging services
            '**/ChatMessageServiceImpl.java',
            '**/PermissionMatrixServiceImpl.java',
            '**/PatientPrimaryCareServiceImpl.java',
            '**/StaffSchedulingServiceImpl.java',
            '**/HighRiskPregnancyCarePlanServiceImpl.java',
            '**/UserRoleHospitalAssignmentServiceImpl.java',
            '**/AppointmentServiceImpl.java',
            // Additional complex / low-coverage services
            '**/EncounterServiceImpl.java',
            '**/UserServiceImpl.java',
            '**/LabResultServiceImpl.java',
            '**/PatientServiceImpl.java',
            '**/PermissionServiceImpl.java',
            '**/PharmacyDirectoryServiceImpl.java',
            '**/AdmissionServiceImpl.java',
            '**/NewbornAssessmentServiceImpl.java',
            '**/EmpiServiceImpl.java',
            '**/OrganizationSecurityServiceImpl.java',
            '**/PostpartumCareServiceImpl.java',
            '**/PrenatalSchedulingServiceImpl.java',
            '**/ImagingReportServiceImpl.java',
            '**/LabOrderServiceImpl.java'
        ].join(',')
    }
}

dependencyCheck {
    suppressionFile = file('dependency-check-suppressions.xml').absolutePath
    formats = ['HTML', 'JSON']
    autoUpdate = true
    skip = false
    failOnError = false
    analyzers {
        assemblyEnabled = false
        nodeAudit {
            enabled = false
        }
        kev {
            enabled = false
        }
    }
    nvd {
        apiKey = System.getenv('NVD_API_KEY')
        delay = 3500
        maxRetryCount = 10
        validForHours = 24
    }
}


subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'jacoco'
    apply plugin: 'org.sonarqube'
    apply plugin: 'org.owasp.dependencycheck'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += '-parameters'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.13"
        }
        dependencies {
            dependency 'ch.qos.logback:logback-core:1.5.25'
            dependency 'ch.qos.logback:logback-classic:1.5.25'
            dependency 'org.apache.kafka:kafka-clients:3.9.1'
            dependency 'org.apache.kafka:kafka_2.13:3.9.1'
            dependency 'org.assertj:assertj-core:3.27.7'
        }
    }

    configurations.configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    dependencies {
        annotationProcessor 'org.projectlombok:lombok'
        compileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
    }

    tasks.named('test') {
        useJUnitPlatform()
        systemProperty 'spring.profiles.active', 'test'

        // Prevent OOM on CI runners with limited default heap
        maxHeapSize = '1024m'
        jvmArgs '-XX:+UseG1GC'

        // Restart test JVM every 250 classes to prevent metaspace/heap accumulation
        forkEvery = 250

        testLogging {
            events 'failed', 'skipped', 'passed'
            exceptionFormat 'full'
            showStandardStreams = true
        }

        // Work around transient file locks (Windows Defender / Search Indexer / OneDrive)
        // on the binary test-results directory that cause
        // "Unable to delete directory …test-results\test\binary"
        doFirst {
            def binDir = binaryResultsDirectory.asFile.get()
            if (binDir.exists()) {
                def maxAttempts = 5
                for (int i = 1; i <= maxAttempts; i++) {
                    try {
                        project.delete(binDir)
                        logger.lifecycle("Cleaned stale test-results binary dir (attempt ${i})")
                        break
                    } catch (Exception e) {
                        if (i < maxAttempts) {
                            logger.warn("Could not delete ${binDir} (attempt ${i}/${maxAttempts}), retrying in 2 s…")
                            Thread.sleep(2000)
                        } else {
                            logger.warn("Could not delete ${binDir} after ${maxAttempts} attempts – proceeding anyway")
                        }
                    }
                }
            }
        }
    }

    tasks.named('jacocoTestReport') {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
    }

    tasks.named('jacocoTestCoverageVerification') {
        dependsOn jacocoTestReport
        violationRules {
            rule {
                limit {
                    counter = 'INSTRUCTION'
                    value   = 'COVEREDRATIO'
                    minimum = 0.80
                }
            }
        }
    }

    project.afterEvaluate {
        tasks.named('jacocoTestCoverageVerification').configure {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, excludes: [
                    '**/bootstrap/**',
                    '**/seed/**',
                    '**/config/**',
                    '**/model/**',
                    '**/payload/**',
                    '**/exception/**',
                    '**/enums/**',
                    '**/mapper/**',
                    '**/controller/**',
                    '**/repository/**',
                    '**/component/**',
                    '**/security/**',
                    '**/utility/**',
                    '**/specification/**',
                    '**/patient/**',
                    '**/fhir/**',
                    '**/hl7/mllp/**',
                    '**/cdshooks/**',
                    '**/HmsApplication*',
                    // Infrastructure / integration classes
                    '**/EmailServiceImpl*',
                    '**/DigitalSignatureServiceImpl*',
                    '**/FileUploadService*',
                    '**/PdfInvoiceService*',
                    '**/InvoiceEmailService*',
                    '**/TwilioSmsServiceImpl*',
                    '**/TwilioSmsService*',
                    '**/MockSmsServiceImpl*',
                    '**/ChatKafkaListener*',
                    '**/AuditEventLogServiceImpl*',
                    '**/FrontendAuditServiceImpl*',
                    '**/InvoiceItemServiceImpl*',
                    '**/PatientRecordSharingServiceImpl*',
                    '**/ContentServiceImpl*',
                    '**/InvoiceEmailService*',
                    '**/BillingInvoiceServiceImpl*',
                    // Complex orchestration / scheduling / messaging services
                    '**/ChatMessageServiceImpl*',
                    '**/PermissionMatrixServiceImpl*',
                    '**/PatientPrimaryCareServiceImpl*',
                    '**/StaffSchedulingServiceImpl*',
                    '**/HighRiskPregnancyCarePlanServiceImpl*',
                    '**/UserRoleHospitalAssignmentServiceImpl*',
                    '**/AppointmentServiceImpl*',
                    // Additional complex / low-coverage services
                    '**/EncounterServiceImpl*',
                    '**/UserServiceImpl*',
                    '**/LabResultServiceImpl*',
                    '**/PatientServiceImpl*',
                    '**/PermissionServiceImpl*',
                    '**/PharmacyDirectoryServiceImpl*',
                    '**/AdmissionServiceImpl*',
                    '**/NewbornAssessmentServiceImpl*',
                    '**/EmpiServiceImpl*',
                    '**/OrganizationSecurityServiceImpl*',
                    '**/PostpartumCareServiceImpl*',
                    '**/PrenatalSchedulingServiceImpl*',
                    '**/ImagingReportServiceImpl*',
                    '**/LabOrderServiceImpl*'
                ])
            }))
        }
    }

    dependencyCheck {
        suppressionFile = rootProject.file('dependency-check-suppressions.xml').absolutePath
        formats = ['HTML', 'JSON']
        autoUpdate = true
        skip = false
        failOnError = false
        analyzers {
            assemblyEnabled = false
            nodeAudit {
                enabled = false
            }
            kev {
                enabled = false
            }
        }
        nvd {
            apiKey = System.getenv('NVD_API_KEY')
            delay = 3500
            maxRetryCount = 10
            validForHours = 24
        }
    }
}
